@@ -195,6 +195,42 @@ void WinMergeCmdLineParser::ParseParam(const TCHAR* pszParam, BOOL bFlag, BOOL b
 
 	if (TRUE == bLast)
 	{
+		// NOTE: This is to fix a bug in MFC's parser!
+		// If first path ends with "\" inside parentheses (e.g. "c:\dir 1\") then
+		// it is not properly splitted and second path is not separated from first
+		// path. So command line like:
+		// WinMerge "C:\Dir 1\" C:\Dir2
+		// gets parsed as having one path! "C:\Dir 1" C:\Dir2"
+		// As there are no valid parentheses in paths in this stage, we just have
+		// to find parentheses and fix paths. For the second path, there may be
+		// parenthesis at the end - that we can just remove.
+		if (m_CmdLineInfo.m_nFiles == 1)
+		{
+			CString file1;
+			CString file2;
+			int pos = m_CmdLineInfo.m_Files[0].Find(_T("\""));
+
+			// If the parenthesis found from middle of first path (not end)
+			if (pos > 0 && pos < m_CmdLineInfo.m_Files[0].GetLength() - 1)
+			{
+				file1 = m_CmdLineInfo.m_Files[0].Left(pos);
+				file2 = m_CmdLineInfo.m_Files[0].Mid(pos + 2);
+			}
+
+			// Remove possible parenthesis from end of second path.
+			// Second path got split from first path.
+			if (file2[file2.GetLength() - 1] == '\"')
+				file2.Delete(file2.GetLength() - 1, 1);
+
+			// Set new paths to the structure
+			if (pos > 0)
+			{
+				m_CmdLineInfo.m_Files[0] = file1;
+				m_CmdLineInfo.m_Files.SetAtGrow(1, file2);
+				m_CmdLineInfo.m_nFiles = 2;
+			}
+		}
+
 		// If "compare file dir" make it "compare file dir\file".
 		if (m_CmdLineInfo.m_nFiles >= 2)
 		{
